sql/src/test/resources/drill/window/queries/negative/no_over_clause-1.res
0\t
VALIDATION ERROR
.*OVER clause is necessary for window functions
